--- a/.kitchen.docker.yml
+++ b/.kitchen.docker.yml
@@ -51,6 +51,7 @@ platforms:
     platform: rhel
     pid_one_command: /usr/lib/systemd/systemd
     intermediate_instructions:
+      - ENV container docker
       - RUN yum -y install lsof which systemd-sysv initscripts
 
 - name: fedora-latest
