--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -16,6 +16,7 @@ platforms:
   - name: centos-7
   - name: debian-7
   - name: debian-8
+  - name: debian-9
   - name: fedora-26
   - name: freebsd-10
   - name: freebsd-11
